# rustid

./: .gitignore  Cargo.toml  Makefile  README.md  main.py  pyproject.toml
rustid/: __init__.py  rustid.pyi
src/: lib.rs
test/: test_benchmark.py
