[package]
name = "rustid"
version = "0.0.2"
edition = "2021"

[lib]
name = "rustid"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module"] }
uuid = { version = "1.8", features = ["v1", "v4", "v7"] }
base64 = "0.22"
rayon = "1.8"
hex = "0.4"
fastrand = "2.0"

[build-dependencies]
pyo3-build-config = "0.25"